update portfolio name

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="portfolio-box">
                 <img src="/photo/one.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Travel, enjoy and live a new</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, eligendi. Ipsa atque error vel similique?</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
@@ -116,7 +116,7 @@
             <div class="portfolio-box">
                 <img src="/photo/rsz_two.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>BURGER SHOP</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, eligendi. Ipsa atque error vel similique?</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
@@ -125,7 +125,7 @@
             <div class="portfolio-box">
                 <img src="/photo/rsz_three.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Nature Trips</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, eligendi. Ipsa atque error vel similique?</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
@@ -134,7 +134,7 @@
             <div class="portfolio-box">
                 <img src="/photo/rsz_four.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>BUSINESS ETHICS</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, eligendi. Ipsa atque error vel similique?</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
@@ -143,7 +143,7 @@
             <div class="portfolio-box">
                 <img src="/photo/rsz_five.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>XD-TEMPLATE</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, eligendi. Ipsa atque error vel similique?</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
@@ -152,7 +152,7 @@
             <div class="portfolio-box">
                 <img src="/photo/rsz_1six.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>PHARMACY</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, eligendi. Ipsa atque error vel similique?</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
