--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
+            <a href="#skill">Skill</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -97,6 +98,53 @@
         </div>
     </section>
     <!-- Service section end -->
+
+    <!-- Skill section start -->
+
+    <section class="container skill-section" id="skill">
+        <div>
+            <h1 class="heading">My <span>Skill</span></h1>
+        </div>
+
+        <div>
+            <h1 class="headding1">Technical Skills</h1>
+
+            <div class="Technical-bars">
+                <div class="bar">
+                    <div class="info">
+                        <span>HTML</span>
+                    </div>
+                    <div class="progress-line html">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="bar">
+                    <div class="info">
+                        <span>CSS</span>
+                    </div>
+                    <div class="progress-line css">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="bar">
+                    <div class="info">
+                        <span>BOOTSTRAP</span>
+                    </div>
+                    <div class="progress-line bootstrap">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="bar">
+                    <div class="info">
+                        <span>JavaScript</span>
+                    </div>
+                    <div class="progress-line javascript">
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Portfolio section start -->
 
